Slick.js fotocarousel
in plaats van tekst heb ik nu fotos toegevoegd aan de carousel van slick. waardoor je meer javascript gebruikt en het weer iets complexer wordt.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x: hidden;
+}
+
 .bloc-logo {
     position: relative;
     width: 1300px;
@@ -47,4 +51,11 @@ h1 {
 
 .blauw {
     background-color: blue;
+}
+
+img{
+    width: 1000px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
 }
